# dspark-rwkv

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  stage2_gen_data.py  stage2_gen_data_5layer.py  stage2_gen_data_fast.py  stage2_target.py  stage2_train.py  stage2_train_v2.py  stage2_train_v3.py  stage4_concurrent.py
albatross_ref/: rwkv7.py
archive/: experiment_v1.py  experiment_xor.py  stage2_benchmark.py  stage2_verify_target.py  stage4_e2e_batch1_buggy.py
archive/legacy/: README.md  stage1_experiment.py  stage2_gen_data_sharegpt.py  stage2_gen_data_text.py  stage2_train_v3_text.py  stage3_schedule.py  stage3_schedule_v2.py
archive/stage9_13_failed/: probe_29b.py  spec_output.txt  stage10_kstate_spec.py  stage11_cuda_target.py  stage11_kstate_spec.py  stage12_kstate_cuda_draft.py  stage12_profile.py  stage13_cuda_graph_draft.py  stage7_proper_eval.py  stage8_compare.py  stage8_gen_data.py  stage8_train_ss.py  stage9_alpha_test.py  stage9_batch_spec.py  stage9_batch_verify_test.py  stage9_compare_albatross.py  stage9_convert_st.py  stage9_debug_shape.py  stage9_diag.py  stage9_download_wikitext.py  stage9_fusion_topk.py  stage9_g1a_test.py  stage9_gen_data.py  stage9_gen_test.py  stage9_gen_test2.py  stage9_graph_test.py  stage9_graph_verify.py  stage9_inspect_st.py  stage9_inspect_weights.py  stage9_kbatch_test.py  stage9_logit_fusion.py  stage9_logit_fusion_01b.py  stage9_mid_state_test.py  (+11 more)
data/: README.md  wikitext_sentences.jsonl
docs/: RWKV7公式参考.md  paper_en.md  paper_zh.md  方案.md  阶段1实验报告.md  阶段1实验汇总表.md  阶段3-4报告.md
weights/: README.md
(+3 files in other folders)
